added mapping for scam scans, scam strend dashboard for users and analytics trend for admin & staff (scam checker not working without api key)

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,4 @@ App_Data/
 # EXCEPTION: Do NOT ignore database files in SpotTheScam/Database/
 !SpotTheScam/SpotTheScam/Database/*.mdf
 !SpotTheScam/SpotTheScam/Database/*.ldf
+/SpotTheScam/appSettings.secrets.config
