--- a/SpotTheScam/Web.config
+++ b/SpotTheScam/Web.config
@@ -3,8 +3,10 @@
 	<connectionStrings>
 		<add name="SpotTheScamConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SpotTheScamDB.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
 	</connectionStrings>
-	<appSettings>
+	<appSettings file="appSettings.secrets.config">
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+		<!-- Placeholder. Put your real key in appSettings.secrets.config or set OPENAI_API_KEY env var. -->
+		<add key="OpenAIApiKey" value="" />
 	</appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2" />
