--- a/SpotTheScam/SpotTheScam.csproj
+++ b/SpotTheScam/SpotTheScam.csproj
@@ -619,6 +619,7 @@
     <Compile Include="User\WebinarRegistrationSuccess.aspx.designer.cs">
       <DependentUpon>WebinarRegistrationSuccess.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Utils\WhitelistHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Staff\Staff.Master" />
