--- a/SpotTheScam/packages.config
+++ b/SpotTheScam/packages.config
@@ -5,10 +5,14 @@
   <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net472" />
   <package id="HtmlSanitizer" version="9.0.886" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.8" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.8" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.8" targetFramework="net472" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="OpenAI" version="2.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
